--- a/angular.json
+++ b/angular.json
@@ -20,8 +20,8 @@
             "tsConfig": "tsconfig.app.json",
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
-              "src/styles.css",
-              "./node_modules/bootstrap/dist/css/bootstrap.css"
+              "./node_modules/bootstrap/dist/css/bootstrap.css",
+              "src/styles.css"
             ],
             "scripts": [
               "./node_modules/bootstrap/dist/js/bootstrap.bundle.js"
@@ -76,9 +76,10 @@
             "tsConfig": "tsconfig.spec.json",
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
-              "src/styles.css",
+              
               "./node_modules/bootstrap/dist/css/bootstrap.css",
-              "./node_modules/bootstrap-icons/font/bootstrap-icons.min.css"
+              "./node_modules/bootstrap-icons/font/bootstrap-icons.min.css",
+              "src/styles.css"
             ],
             "scripts": [
               "./node_modules/bootstrap/dist/js/bootstrap.bundle.js",
